--- a/script/style.css
+++ b/script/style.css
@@ -1,8 +1,8 @@
 body {background-color:gray;
-      font-family:arial narrow;
+      font-family:arial;
       color:white;}
 h1{color:grey;
-   font-family:arial black;}
+   font-family:verdana;}
 .maindiv {background-color:white;
         color:black;
         width:480px;
